--- a/NongSanShop/Views/Home/Store.cshtml
+++ b/NongSanShop/Views/Home/Store.cshtml
@@ -41,7 +41,7 @@
                             <li>
                                 <div class="products">
                                     <a href="@Url.Action("ProductDetail","Home", new { id = item.id })">
-                                        <img src="@Url.Content(imgPath + item.avatar)" alt="Ảnh">
+                                        <img src="@Url.Content(imgPath + item.avatar)" alt="Ảnh" height="200px">
                                     </a>
                                     
                                     <h4>@item.name</h4>
