--- a/NongSanShop/Views/Shared/_ClientLayout.cshtml
+++ b/NongSanShop/Views/Shared/_ClientLayout.cshtml
@@ -162,7 +162,7 @@
                 <div class="row">
                     <div class="col-md-12">
                         <a href="@Url.Action("Index","Home")">
-                            <img src="~/wwwroot/images/logo.png" alt="logo">
+                            <img src="~/wwwroot/images/logo-nong-san.png" alt="logo">
                         </a>
                     </div>	<!-- End of /.col-md-12 -->
                 </div>	<!-- End of /.row -->
