--- a/NongSanShop/Views/Home/Index.cshtml
+++ b/NongSanShop/Views/Home/Index.cshtml
@@ -23,9 +23,9 @@
         <div class="row">
             <div class="col-md-12">
                 <div id="slider" class="nivoSlider">
-                    <img src="~/wwwroot/images/slider.jpg" alt="" />
-                    <img src="~/wwwroot/images/slider1.jpg" alt="" />
-                    <img src="~/wwwroot/images/slider2.jpg" alt="" />
+                    <img src="~/wwwroot/images/banner1.jpg" alt="" height="400"/>
+                    <img src="~/wwwroot/images/banner2.jpg" alt="" height="400"/>
+                    <img src="~/wwwroot/images/banner3.jpg" alt="" height="400"/>
                 </div>	<!-- End of /.nivoslider -->
             </div>	<!-- End of /.col-md-12 -->
         </div>	<!-- End of /.row -->
