--- a/NongSanShop/Views/Home/ProductDetail.cshtml
+++ b/NongSanShop/Views/Home/ProductDetail.cshtml
@@ -49,7 +49,7 @@
                         <h4>@Html.DisplayFor(model => model.name)</h4>
                         <p class="price">@string.Format("{0:#,### VNĐ}", Convert.ToDecimal(Model.price))</p>
                         <p>@Html.DisplayFor(model => model.description)</p>
-                        <a class="view-link" href="@Url.Action("Create", "UserCart", new { productId = Model.id, userId = user?.UserId ?? -1})"><i class="fa fa-plus-circle"></i>Add To Cart</a>
+                        <a class="view-link" href="@Url.Action("Create", "UserCart", new { productId = Model.id, userId = user?.UserId ?? -1})"><i class="fa fa-plus-circle"></i>Thêm vào giỏ hàng</a>
                     </div>	<!-- End of /.product-des -->
                 </div> <!-- End of /.block -->
             </div>	<!-- End of /.col-md-4 -->
