--- a/NongSanShop/Views/Home/Store.cshtml
+++ b/NongSanShop/Views/Home/Store.cshtml
@@ -49,7 +49,7 @@
                                     <div>
                                         
                                         <a class="view-link shutter" href="@Url.Action("Create", "UserCart", new { productId = item.id, userId = user?.UserId ?? -1})">
-                                            <i class="fa fa-plus-circle"></i>Add To Cart
+                                            <i class="fa fa-plus-circle"></i>Thêm vào giỏ hàng
                                         </a>
                                     </div>
                                 </div>	<!-- End of /.products -->
